# northstar

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  plane-mcp.json  pyproject.toml  requirement.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: README.md
docs/: ROADMAP.md  SETUP-AND-TEST.md  e2e-walkthrough.md  northstar-usage.md  sandbox-setup.md
docs/superpowers/plans/: 2026-06-18-orchestrator-mvp-slice.md  2026-06-19-efficiency-hardening.md  2026-06-19-northstar-cli.md  2026-06-19-northstar-plane-setup.md  2026-06-19-planning-bridge-and-scheduler.md  2026-06-19-pluggable-process-backend.md
docs/superpowers/specs/: 2026-06-18-orchestrator-mvp-slice-design.md  2026-06-19-efficiency-hardening-design.md  2026-06-19-northstar-cli-design.md  2026-06-19-northstar-plane-setup-design.md  2026-06-19-planning-bridge-and-scheduler-design.md  (+1 more)
northstar/: assets.py  cli.py  doctor.py  formatting.py  importer.py  initcmd.py  paths.py  plane_admin.py  proc.py  project.py  skills.py  supervisor.py
orchestrator/: __main__.py  config.py  dispatch.py  health.py  launcher.py  obs.py  plane.py  poller.py  state_machine.py  worktree.py
templates/: CLAUDE.md.tmpl  builder.md  claude-settings.json  plane-importer.md  plane-relabeler.md  qa.md  reviewer.md
templates/hooks/: precommit_gate.sh
tests/: test_assets.py  test_cli.py  test_config.py  test_dispatch.py  test_doctor.py  test_formatting.py  test_health.py  test_importer.py  test_importer_doc.py  test_initcmd.py  test_launcher.py  test_obs.py  test_paths.py  test_plane.py  test_plane_admin.py  test_poller.py  test_precommit_gate.py  test_proc.py  test_project.py  test_role_docs.py  test_skills.py  test_state_machine.py  test_supervisor.py  test_worktree.py
(+4 files in other folders)
