[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["orchestrator*"]
