[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "northstar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "PyYAML>=6.0", "typer>=0.12"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21"]

[project.scripts]
northstar = "northstar.cli:app"
ns = "northstar.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["orchestrator*", "northstar*"]
