[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "northstar"
version = "0.1.0"
description = "Autonomous software-development orchestrator that drives a Plane board through build/review/QA/merge with real Claude Code sessions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["httpx>=0.27", "PyYAML>=6.0", "typer>=0.12"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21"]

[project.scripts]
northstar = "northstar.cli:app"
ns = "northstar.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["orchestrator*", "northstar*"]
